--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,8 @@
     "ioredis": "^4.14.1",
     "koa": "^2.11.0",
     "koa-cache-lite": "^3.8.8",
+    "koa-conditional-get": "^2.0.0",
+    "koa-etag": "^3.0.0",
     "koa-router": "^8.0.6",
     "mcproto": "^0.7.12"
   },
